# NMRlipids

./: .gitignore  .pre-commit-config.yaml  FormFactor_to_TotalDensity_model_training_walkthrough.ipynb  README.md  new_functions.py  pyproject.toml
